@@ -1,3 +1,12 @@
+2006-05-16  Audrius Meskauskas  <AudriusA@Bioinformatics.org>
+
+	* javax/swing/plaf/basic/BasicInternalFrameUI.java
+	(BorderListener): Rewritten. (InternalFrameBorder):
+	Made package private.
+	(InternalFrameBorder.offset):
+	Renamed to cornerSize, made package private.
+	(bSize): Made package private.
+
 2006-05-16  Roman Kennke <kennke@aicas.com>
 
 	* javax/swing/JMenu.java
